[package]
name = "svix-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.1", features = ["timeout", "trace"] }

