[package]
name = "svix-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"

time = "0.3.31"
uuid = "1.7.0"

dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = "0.9.2"
tower-http = { version = "0.5.1", features = ["timeout", "trace"] }

sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time", "uuid"] }

